--- a/app/views/schools/information.html.erb
+++ b/app/views/schools/information.html.erb
@@ -24,5 +24,40 @@
   <p><%= @schools.curriculum %></p>
   <p>Student research opportunities available? <%= @schools.research_opportunities %><br/>
   Degree programs available that can be combined with doctoral dental degree: <%= @schools.degree_programs %>
+
+  <!-- Display tables -->
+  <% @data_table_configs.each do |data_table_config| %>
+
+    <!-- Display table with data -->
+    <h4><%= @table_names[ data_table_config.table_name_id ] %></h4>
+    <table style="border: 1px solid grey;">
+    <% for y in 1..data_table_config.rows %>
+      <tr>
+        <!-- Left-aligned text for categories -->
+        <td style="border: 1px solid grey; text-align: left;">
+          <%= @table_types[ data_table_config.table_name_id ][ y ][ 1 ].to_s %>
+        </td>
+
+        <!-- Everything else center-aligned -->
+        <% x = 2
+           while (x <= data_table_config.columns)
+             if ( y == 1 )
+               colspan = @table_types[ data_table_config.table_name_id ][ y ][ x ].to_s[0..2].gsub("#","")
+               length = @table_types[ data_table_config.table_name_id ][ y ][ x ].to_s.length
+               @table_types[ data_table_config.table_name_id ][ y ][ x ] = @table_types[ data_table_config.table_name_id ][ y ][ x ].to_s[3..length]
+             else
+               colspan = 1
+             end %>
+          <td style="border: 1px solid grey; text-align: center;" colspan="<%= colspan %>">
+            <%= @table_types[ data_table_config.table_name_id ][ y ][ x ].to_s %>
+            <% x += colspan.to_i %>
+          </td>
+        <% end %>
+      </tr>
+    <% end %>
+    </table>
+  <% end %>
+
+  <!-- Back to index.html -->
   <p><%= link_to( 'Back to schools list' , {:action => 'index'} ) %></p>
 </div>
