Helper: display fields and tables

--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -1,5 +1,5 @@
 <div id="<%= @program.id %>" style="width: 80%; margin: 0 auto;">
-  <div style="background-color: grey; color: white; margin-top: 2em;">
+  <div style="background-color: grey; color: white; margin-top: 1em; padding: 0.25em;">
   <h2><strong><%= @program.program %><strong></h2>
   </div>
 
@@ -9,43 +9,8 @@
       <h2><%= f.section_name %></h2>
       <% this_section = f.section_name %>
     <% end %>
-    <% if ( f.content_type == 'field' ) %>
-      <p><%= f.display_name %> <i><%= f.field_value %></i></p>
-    <% elsif ( f.content_type == 'table' ) %>
-      <p><%= f.display_name %></p>
+    <%= display_fields_and_tables(f) %>
 
-      <!-- Display table -->
-      <% @data_table_configs.each do |data_table_config| %>
-        <% if ( data_table_config.table_name_id == f.id ) %>
-          <table style="border: 1px solid grey;">
-          <% for y in 1..data_table_config.rows %>
-            <tr>
-              <!-- Left-aligned text for categories -->
-              <td style="border: 1px solid grey; text-align: left;">
-                <%= @table_types[ data_table_config.table_name_id ][ y ][ 1 ].to_s %>
-              </td>
-
-              <!-- Everything else center-aligned -->
-              <% x = 2
-                 while (x <= data_table_config.columns)
-                   if ( y == 1 )
-                     colspan = @table_types[ data_table_config.table_name_id ][ y ][ x ].to_s[0..2].gsub("#","")
-                     length = @table_types[ data_table_config.table_name_id ][ y ][ x ].to_s.length
-                     @table_types[ data_table_config.table_name_id ][ y ][ x ] = @table_types[ data_table_config.table_name_id ][ y ][ x ].to_s[3..length]
-                   else
-                     colspan = 1
-                   end %>
-                <td style="border: 1px solid grey; text-align: center;" colspan="<%= colspan %>">
-                  <%= @table_types[ data_table_config.table_name_id ][ y ][ x ].to_s %>
-                  <% x += colspan.to_i %>
-                </td>
-              <% end %>
-            </tr>
-          <% end %>
-          </table>
-        <% end %>
-      <% end %>
-    <% end %>
   <% end %>
 
 </div>
