--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container" style="max-width: 90vw;">
 
-  <h1>Dental Schools</h1>
+  <h1>Search result: <%= pluralize(@programs.size, 'Dental School') %></h1>
 
   <% @programs.each do |p| %>
     <p><%= link_to( p.program , {:controller => 'programs', :action => 'information', :id => p.id} ) %></p>
