Filter by School Type

--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -16,4 +16,4 @@
 </div>
 
 <!-- Back to index.html -->
-<p><%= link_to( 'Back to schools list' , {:action => 'index'} ) %></p>
+<p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
