--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -3,16 +3,31 @@
   <h1><%= pluralize(@programs.size, 'Dental School') %></h1>
 
   <%= form_tag('/search') do %>
-    <div style="margin-bottom: 2em;">
-      <p>Type of institution:</p>
-      <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-        <% $filter_1_values.each do |item| %>
-          <li>
-            <%= check_box_tag item.field_value %>
-            <%= item.field_value %>
-          </li>
-        <% end %>
-      </ul>
+    <div style="margin: 0 auto;">
+      <div style="margin-bottom: 2em; display: inline-block; width: 25%; vertical-align: text-top;">
+        <p>Type of institution:</p>
+        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
+          <% $filter_1_values.each do |item| %>
+            <li>
+              <%= check_box_tag(item.field_value, 1) %>
+              <%= item.field_value %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+      <div style="margin-bottom: 2em; display: inline-block; width: 25%; vertical-align: text-top;">
+        <p>Residency requirements:</p>
+        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
+          <% $filter_2_values.each do |item| %>
+            <li>
+              <%= check_box_tag(item.field_value, 2) %>
+              <%= item.field_value.gsub("?","") %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+      <div style="margin-bottom: 2em; display: inline-block; width: 50%; vertical-align: text-top;">
+      </div>
       <%= submit_tag("Filter", class: 'btn btn-primary btn-lg') %>
     </div>
   <% end %>
