--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -4,7 +4,7 @@
 
   <%= form_tag('/search') do %>
     <div style="margin: 0 auto;">
-      <div style="margin-bottom: 2em; display: inline-block; width: 25%; vertical-align: text-top;">
+      <div style="margin-bottom: 2em; display: inline-block; width: 24%; vertical-align: text-top;">
         <p>Type of institution:</p>
         <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
           <% $filter_1_values.each do |item| %>
@@ -26,7 +26,27 @@
           <% end %>
         </ul>
       </div>
-      <div style="margin-bottom: 2em; display: inline-block; width: 50%; vertical-align: text-top;">
+      <div style="margin-bottom: 2em; display: inline-block; width: 25%; vertical-align: text-top;">
+        <p>Predental programs:</p>
+        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
+          <% $filter_3_values.each do |item| %>
+            <li>
+              <%= check_box_tag(item.field_value, 3) %>
+              <%= item.field_value.gsub("?","") %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+      <div style="margin-bottom: 2em; display: inline-block; width: 24%; vertical-align: text-top;">
+        <p>State/Territory/Province:</p>
+        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
+          <% $filter_4_values.each do |item| %>
+            <li>
+              <%= check_box_tag(item.field_value, 4) %>
+              <%= item.field_value.gsub("?","") %>
+            </li>
+          <% end %>
+        </ul>
       </div>
       <%= submit_tag("Filter", class: 'btn btn-primary btn-lg') %>
     </div>
