--- a/app/views/programs/search.html.erb
+++ b/app/views/programs/search.html.erb
@@ -2,7 +2,7 @@
 
   <%= form_tag('/search') do %>
     <div style="margin: 0 auto;">
-      <div style="margin-bottom: 2em; display: inline-block; width: 25%; vertical-align: text-top;">
+      <div style="margin-bottom: 2em; display: inline-block; width: 24%; vertical-align: text-top;">
         <p>Type of institution:</p>
         <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
           <% $filter_1_values.each do |item| %>
@@ -24,7 +24,27 @@
           <% end %>
         </ul>
       </div>
-      <div style="margin-bottom: 2em; display: inline-block; width: 50%; vertical-align: text-top;">
+      <div style="margin-bottom: 2em; display: inline-block; width: 25%; vertical-align: text-top;">
+        <p>Predental programs:</p>
+        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
+          <% $filter_3_values.each do |item| %>
+            <li>
+              <%= check_box_tag(item.field_value, 3) %>
+              <%= item.field_value.gsub("?","") %>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+      <div style="margin-bottom: 2em; display: inline-block; width: 24%; vertical-align: text-top;">
+        <p>State/Territory/Province:</p>
+        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
+          <% $filter_4_values.each do |item| %>
+            <li>
+              <%= check_box_tag(item.field_value, 4) %>
+              <%= item.field_value.gsub("?","") %>
+            </li>
+          <% end %>
+        </ul>
       </div>
       <%= submit_tag("Filter", class: 'btn btn-primary btn-lg') %>
     </div>
@@ -37,6 +57,12 @@
   <% end %>
   <% if ( !@values_to_search_2.empty? ) %>
     <p>Residency requirements: <%= @values_to_search_2.join(', ') %></p>
+  <% end %>
+  <% if ( !@values_to_search_3.empty? ) %>
+    <p>Predental programs offered: <%= @values_to_search_3.join(', ') %></p>
+  <% end %>
+  <% if ( !@values_to_search_4.empty? ) %>
+    <p>State/Territory/Province: <%= @values_to_search_4.join(', ') %></p>
   <% end %>
 
   <p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
