--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,25 +6,32 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
   </head>
 
   <body>
     <nav class="navbar navbar-inverse bg-primary">
       <div class="container">
-        <div class="navbar-header">
-          <h1>Dental Schools Directory</h1>
-        </div>
         <div id="navbar">
           <!-- <ul class="nav navbar-nav">
             <li><%= link_to 'Home', root_path %></li>
           </ul> -->
           <div class="nav navbar-nav pull-right">
             <% if current_user %>
-              <p><%= current_user.login %></p>
-              <button class="btn btn-warning"><%= link_to 'Sign Out', sign_out_path, method: :delete %></button>
+              <p>Hello, <%= current_user.login %>!
+              <button class="btn btn-warning"><%= link_to 'Sign Out', sign_out_path, method: :delete %></button></p>
             <% end %>
           </div>
         </div>
+        <div class="navbar-header">
+          <h1>Dental Schools Directory</h1>
+        </div>
+        
       </div>
     </nav>
 
