--- a/app/views/programs/index.html.erb
+++ b/app/views/programs/index.html.erb
@@ -1,70 +1,79 @@
-<div class="container" style="max-width: 90vw;">
-
-  <h1><%= pluralize(@programs.size, 'Dental School') %></h1>
-
-  <%= form_tag('/search') do %>
-    <div style="margin: 0 auto;">
-      <div style="margin-bottom: 2em; display: inline-block; width: 14%; vertical-align: text-top;">
-        <p>Type of institution:</p>
-        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-          <% $filter_1_values.each do |item| %>
-            <li>
-              <%= check_box_tag(item.field_value, 1) %>
-              <%= item.field_value %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <div style="margin-bottom: 2em; display: inline-block; width: 25%; vertical-align: text-top;">
-        <p>Residency requirements:</p>
-        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-          <% $filter_2_values.each do |item| %>
-            <li>
-              <%= check_box_tag(item.field_value, 2) %>
-              <%= item.field_value.gsub("?","") %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <div style="margin-bottom: 2em; display: inline-block; width: 25%; vertical-align: text-top;">
-        <p>Predental programs:</p>
-        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-          <% $filter_3_values.each do |item| %>
-            <li>
-              <%= check_box_tag(item.field_value, 3) %>
-              <%= item.field_value.gsub("?","") %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <div style="margin-bottom: 2em; display: inline-block; width: 20%; vertical-align: text-top;">
-        <p>State/Territory/Province:</p>
-        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-          <% $filter_4_values.each do |item| %>
-            <li>
-              <%= check_box_tag(item.field_value, 4) %>
-              <%= item.field_value.gsub("?","") %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <div style="margin-bottom: 2em; display: inline-block; width: 14%; vertical-align: text-top;">
-        <p>Degree offered:</p>
-        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-          <% $filter_5_values.each do |item| %>
-            <li>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <h2>Let us help find the right dental program for you.</h2>
+      <%= form_tag('/search') do %>
+      <h3><%= label_tag(:q, "Enter one or more keywords") %></h3>
+      <%= text_field_tag(:q, nil, class: "input form-control") %>
+      <h3>Or use the filters below</h3>
+        <div>
+          <div>
+            <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">            
+            <span class="glyphicon glyphicon-menu-down"></span> Type of Institution</a>
+            <div class="collapse" id="collapseFilterType">
+            <% $filter_1_values.each do |item| %>
+              <p class="match-option">
+                <%= check_box_tag(item.field_value, 1) %>
+                <%= item.field_value %>
+              </p>
+              <% end %>
+            </div>
+          </div>
+          <div>
+            <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down"></span> Residential requirements</a>
+            <div class="collapse" id="collapseFilterResidence">
+              <% $filter_2_values.each do |item| %>
+                <p class="match-option">
+                <%= check_box_tag(item.field_value, 2) %>
+                <%= item.field_value.gsub("?","") %>
+                </p>
+              <% end %>
+            </div>
+          </div>
+          <div>
+            <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterPrograms" aria-expanded="false" aria-controls="collapseFilterPrograms">
+            <span class="glyphicon glyphicon-menu-down"></span> Predental programs</a>
+            <div class="collapse filter-options" id="collapseFilterPrograms">
+              <% $filter_3_values.each do |item| %>
+                <p class="match-option">
+                <%= check_box_tag(item.field_value, 3) %>
+                <%= item.field_value.gsub("?","") %>
+                </p>
+              <% end %>
+            </div>
+          </div>
+          <div>
+          <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterLocation" aria-expanded="false" aria-controls="collapseFilterLocation"><span class="glyphicon glyphicon-menu-down"></span> State/Territory/Province</a>
+            <div class="collapse" id="collapseFilterLocation">
+            
+             <%= select_tag 'location', options_for_select($filter_4_values.collect{ |item| [item.field_value, 4] }), multiple: true, class: "input" %>
+             <p>&nbsp;</p>
+            </div>
+          </div>
+          <div>
+            <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down"></span> Degree offered</a>
+            <div class="collapse" id="collapseFilterDegrees">
+              <% $filter_5_values.each do |item| %>
+              <p class="match-option">
+              
               <%= check_box_tag(item.field_value, 5) %>
               <%= item.field_value.gsub("?","") %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <%= submit_tag("Filter", class: 'btn btn-primary btn-lg') %>
+              </p>
+              <% end %>
+            </div>
+            
+          </div>
+          &nbsp;
+          <%= submit_tag("Filter", class: 'btn btn-primary btn-lg input') %>
+          &nbsp;
+        </div>
+
+
+      <% end %>
+      <h1><%= pluralize(@programs.size, 'Dental School') %></h1>
+      <% @programs.each do |p| %>
+        <p><%= link_to( p.program , {:controller => 'programs', :action => 'information', :id => p.id} ) %></p>
+      <% end %>
     </div>
-  <% end %>
-
-  <% @programs.each do |p| %>
-    <p><%= link_to( p.program , {:controller => 'programs', :action => 'information', :id => p.id} ) %></p>
-  <% end %>
-
+  </div>
 </div>
