--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -1,19 +1,23 @@
-<div id="<%= @program.id %>" style="width: 80%; margin: 0 auto;">
-  <div style="background-color: grey; color: white; margin-top: 1em; padding: 0.25em;">
-  <h2><strong><%= @program.program %><strong></h2>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <div id="<%= @program.id %>">
+      <div style="background-color: grey; color: white; margin-top: 1em; padding: 0.25em;">
+      <h2><strong><%= @program.program %></strong></h2>
+      </div>
+
+      <% this_section = "" %>
+      <% @fields_to_display.each do |f| %>
+        <% if ( this_section != f.section_name ) %>
+          <h2><%= f.section_name %></h2>
+          <% this_section = f.section_name %>
+        <% end %>
+        <%= display_fields_and_tables(f) %>
+
+      <% end %>
+
+    </div>
+
+    <!-- Back to index.html -->
+    <p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
   </div>
-
-  <% this_section = "" %>
-  <% @fields_to_display.each do |f| %>
-    <% if ( this_section != f.section_name ) %>
-      <h2><%= f.section_name %></h2>
-      <% this_section = f.section_name %>
-    <% end %>
-    <%= display_fields_and_tables(f) %>
-
-  <% end %>
-
 </div>
-
-<!-- Back to index.html -->
-<p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
