--- a/app/views/programs/search.html.erb
+++ b/app/views/programs/search.html.erb
@@ -1,90 +1,91 @@
 <div class="container" style="max-width: 90vw;">
-
-  <%= form_tag('/search') do %>
-    <div style="margin: 0 auto;">
-      <div style="margin-bottom: 2em; display: inline-block; width: 14%; vertical-align: text-top;">
-        <p>Type of institution:</p>
-        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-          <% $filter_1_values.each do |item| %>
-            <li>
-              <%= check_box_tag(item.field_value, 1) %>
-              <%= item.field_value %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <div style="margin-bottom: 2em; display: inline-block; width: 25%; vertical-align: text-top;">
-        <p>Residency requirements:</p>
-        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-          <% $filter_2_values.each do |item| %>
-            <li>
-              <%= check_box_tag(item.field_value, 2) %>
-              <%= item.field_value.gsub("?","") %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <div style="margin-bottom: 2em; display: inline-block; width: 25%; vertical-align: text-top;">
-        <p>Predental programs:</p>
-        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-          <% $filter_3_values.each do |item| %>
-            <li>
-              <%= check_box_tag(item.field_value, 3) %>
-              <%= item.field_value.gsub("?","") %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <div style="margin-bottom: 2em; display: inline-block; width: 20%; vertical-align: text-top;">
-        <p>State/Territory/Province:</p>
-        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-          <% $filter_4_values.each do |item| %>
-            <li>
-              <%= check_box_tag(item.field_value, 4) %>
-              <%= item.field_value.gsub("?","") %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <div style="margin-bottom: 2em; display: inline-block; width: 14%; vertical-align: text-top;">
-        <p>Degree offered:</p>
-        <ul style="list-style-type: none; margin: 0; padding: 0 0 1em 1em;">
-          <% $filter_5_values.each do |item| %>
-            <li>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
+      <%= form_tag('/search') do %>
+        <div style="margin: 0 auto;">
+          <div>
+            <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterType" aria-expanded="false" aria-controls="collapseFilterType">            
+            <span class="glyphicon glyphicon-menu-down"></span> Type of Institution</a>
+            <div class="collapse" id="collapseFilterType">
+            <% $filter_1_values.each do |item| %>
+              <p class="match-option">
+                <%= check_box_tag(item.field_value, 1) %>
+                <%= item.field_value %>
+              </p>
+              <% end %>
+            </div>
+          </div>
+          <div>
+          <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterResidence" aria-expanded="false" aria-controls="collapseFilterResidence"><span class="glyphicon glyphicon-menu-down"></span> Residential requirements</a>
+            <div class="collapse" id="collapseFilterResidence">
+              <% $filter_2_values.each do |item| %>
+                <p class="match-option">
+                <%= check_box_tag(item.field_value, 2) %>
+                <%= item.field_value.gsub("?","") %>
+                </p>
+              <% end %>
+            </div>
+          </div>
+          <div>
+          <div>
+            <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterPrograms" aria-expanded="false" aria-controls="collapseFilterPrograms">
+            <span class="glyphicon glyphicon-menu-down"></span> Predental programs</a>
+            <div class="collapse filter-options" id="collapseFilterPrograms">
+              <% $filter_3_values.each do |item| %>
+                <p class="match-option">
+                <%= check_box_tag(item.field_value, 3) %>
+                <%= item.field_value.gsub("?","") %>
+                </p>
+              <% end %>
+            </div>
+          </div>
+          <div>
+            <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterLocation" aria-expanded="false" aria-controls="collapseFilterLocation"><span class="glyphicon glyphicon-menu-down"></span> State/Territory/Province</a>
+            <div class="collapse" id="collapseFilterLocation">
+            
+             <%= select_tag 'location', options_for_select($filter_4_values.collect{ |item| [item.field_value.gsub("?",""), item.field_value] }), multiple: true, class: "input" %>
+             <p>&nbsp;</p>
+            </div>
+          <div>
+            <a class="input btn btn-lg btn-filter" role="button" data-toggle="collapse" href="#collapseFilterDegrees" aria-expanded="false" aria-controls="collapseFilterDegrees"><span class="glyphicon glyphicon-menu-down"></span> Degree offered</a>
+            <div class="collapse" id="collapseFilterDegrees">
+              <% $filter_5_values.each do |item| %>
+              <p class="match-option">
               <%= check_box_tag(item.field_value, 5) %>
               <%= item.field_value.gsub("?","") %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
-      <%= submit_tag("Filter", class: 'btn btn-primary btn-lg') %>
+              </p>
+              <% end %>
+            </div>
+          </div>
+          <%= submit_tag("Filter", class: 'btn btn-primary btn-lg input') %>
+        </div>
+      <% end %>
+
+      <h4>Filtered by:</h4>
+
+      <% if ( !@values_to_search_1.empty? ) %>
+        <p>Type of institution: <%= @values_to_search_1.join(', ') %></p>
+      <% end %>
+      <% if ( !@values_to_search_2.empty? ) %>
+        <p>Residency requirements: <%= @values_to_search_2.join(', ') %></p>
+      <% end %>
+      <% if ( !@values_to_search_3.empty? ) %>
+        <p>Predental programs offered: <%= @values_to_search_3.join(', ') %></p>
+      <% end %>
+      <% if ( !@values_to_search_4.empty? ) %>
+        <p>State/Territory/Province: <%= @values_to_search_4.join(', ') %></p>
+      <% end %>
+      <% if ( !@values_to_search_5.empty? ) %>
+        <p>Degree offered: <%= @values_to_search_5.join(', ') %></p>
+      <% end %>
+
+      <p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
+
+      <h1>Search result: <%= pluralize(@programs.size, 'Dental School') %></h1>
+
+      <% @programs.each do |p| %>
+        <p><%= link_to( p.program , {:controller => 'programs', :action => 'information', :id => p.id} ) %></p>
+      <% end %>
     </div>
-  <% end %>
-
-  <h4>Filtered by:</h4>
-
-  <% if ( !@values_to_search_1.empty? ) %>
-    <p>Type of institution: <%= @values_to_search_1.join(', ') %></p>
-  <% end %>
-  <% if ( !@values_to_search_2.empty? ) %>
-    <p>Residency requirements: <%= @values_to_search_2.join(', ') %></p>
-  <% end %>
-  <% if ( !@values_to_search_3.empty? ) %>
-    <p>Predental programs offered: <%= @values_to_search_3.join(', ') %></p>
-  <% end %>
-  <% if ( !@values_to_search_4.empty? ) %>
-    <p>State/Territory/Province: <%= @values_to_search_4.join(', ') %></p>
-  <% end %>
-  <% if ( !@values_to_search_5.empty? ) %>
-    <p>Degree offered: <%= @values_to_search_5.join(', ') %></p>
-  <% end %>
-
-  <p><%= link_to( 'Show all schools' , {:action => 'index'}, :class => 'btn btn-primary btn-sm' ) %></p>
-
-  <h1>Search result: <%= pluralize(@programs.size, 'Dental School') %></h1>
-
-  <% @programs.each do |p| %>
-    <p><%= link_to( p.program , {:controller => 'programs', :action => 'information', :id => p.id} ) %></p>
-  <% end %>
-
+  </div>
 </div>
