Expand-collapse sections fix

--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -5,25 +5,28 @@
       <h2><strong><%= @program.program %></strong></h2>
       </div>
 
-
-      
- 
-
-
       <% this_section = "" %>
+      <div>
+          <div>
       <% @fields_to_display.each do |f| %>
+
         <% if ( this_section != f.section_name ) %>
-          <h2>
-          <a role="button" data-toggle="collapse" href="<%= f.section_name %>" aria-expanded="false" aria-controls="collapseExample">
-          <%= f.section_name %></a>
-          </h2>
-          <% this_section = f.section_name %>
-        <% end %>
-        <div class="" id="<%= f.section_name %>">
-          <div class="well">
-            <%= display_fields_and_tables(f) %>
+            </div>
           </div>
-        </div>
+          <h2>
+          <a role="button" data-toggle="collapse" href="#collapse<%= f.section_name.gsub(/[^a-zA-Z]/, "").downcase %>" aria-expanded="false" aria-controls="collapse<%= f.section_name %>">
+          <%= f.section_name %>
+          </a>
+          </h2>
+          <div class="collapse" id="collapse<%= f.section_name.gsub(/[^a-zA-Z]/, "").downcase %>">
+            <div class="well">
+              <% this_section = f.section_name %>
+        <% end %>
+        <%= display_fields_and_tables(f) %>
+        <% if ( f.equal?(f.section_name.last) ) %>
+            </div>
+          </div>
+        <% end %>
 
       <% end %>
 
