--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,9 @@ $primary-bg-color: #fff;
 $header-bg-color: #ccc;
 $lighter-bg-color: #dedede;
 
+h3:not(:first-child) {
+	margin-top: 1.5em;
+}
 
 html, body {
 	background-color: $primary-bg-color;
@@ -131,7 +134,7 @@ header {
 //   }
 // }
 
-// animation on arrow 
+// animation on arrow
 
 .btn-filter > span {
   transition: transform .5s;
@@ -162,7 +165,7 @@ table tr {
   border: 1px solid #000;
   // padding: .35em;
 }
-tr:nth-of-type(odd) { 
+tr:nth-of-type(odd) {
   background: #eee;
 }
 
@@ -171,7 +174,7 @@ table td {
   padding: 5px;
   text-align: left;
 }
-.secondary-subject {  	
+.secondary-subject {
 	background-color: #666;
 	color: #fff;
 	text-align: left;
@@ -180,7 +183,7 @@ table td {
   table {
     border: 0;
   }
- 
+
   table thead {
     border: none;
     clip: rect(0 0 0 0);
@@ -194,7 +197,7 @@ table td {
   .subject {
 		text-transform: uppercase;
   }
-  .subject-solo {  	
+  .subject-solo {
   	background-color: #666;
   	color: #fff;
   	text-align: left;
@@ -223,4 +226,3 @@ table td {
     border-bottom: 0;
   }
 }
-
