--- a/app/views/programs/information.html.erb
+++ b/app/views/programs/information.html.erb
@@ -1,16 +1,16 @@
 <div class="row">
   <div class="col-md-10 col-md-offset-1">
-    <div id="<%= @program.id %>">
+    <div class="information-page" id="<%= @program.id %>">
       <div style="background-color: grey; color: white; margin-top: 1em; padding: 0.25em;">
-      <h2><strong><%= @program.program %></strong></h2>
+        <h2><strong><%= @program.program %></strong></h2>
       </div>
 
       <% this_section = "" %>
       <div>
-          <div>
-      <% @fields_to_display.each do |f| %>
+        <div>
+          <% @fields_to_display.each do |f| %>
 
-        <% if ( this_section != f.section_name ) %>
+            <% if ( this_section != f.section_name ) %>
               <% puts "this_section: " + this_section.to_s.strip %>
               <% puts "f.section_name: " + f.section_name.to_s.strip %>
             </div>
@@ -23,9 +23,9 @@
           <div class="collapse" id="collapse_<%= f.section_name.gsub(/[^a-zA-Z]/, "").downcase %>">
             <div class="well">
               <% this_section = f.section_name %>
-        <% end %>
-        <%= display_fields_and_tables(f) %>
-        <% if ( f.equal?(f.section_name.last) ) %>
+          <% end %>
+          <%= display_fields_and_tables(f) %>
+          <% if ( f.equal?(f.section_name.last) ) %>
             </div>
           </div>
         <% end %>
